--- a/html/l47.html
+++ b/html/l47.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
-    <div class="caja">
-        <h1 class="header">Soy cabecera</h1>
-        <div class="contenido">Soy contenido</div>
-        <div class="footer">
-            <button class="primario">Aceptar</button>
-            <button class="secundario">Cancelar</button>
-        </div>
+    <div class="fondo">
+        <p>Lala</p>
+        <p>Lala</p>
+        <p>Lala</p>
+        <p>Lala</p>
     </div>
+
 </body>
 </html>
