--- a/html/l48.html
+++ b/html/l48.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
-    <div class="caja">
-        <h1 class="header">Soy cabecera</h1>
-        <div class="contenido">Soy contenido</div>
-        <div class="footer">
-            <button class="primario">Aceptar</button>
-            <button class="secundario">Cancelar</button>
-        </div>
+    <div class="box">
+        <p>Soy una caja</p>
     </div>
+    <p class="text">Hola mundo</p>
+
 </body>
 </html>
