--- a/html/l53.html
+++ b/html/l53.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
-    <div class="caja">
-        <h1 class="header">Soy cabecera</h1>
-        <div class="contenido">Soy contenido</div>
-        <div class="footer">
-            <button class="primario">Aceptar</button>
-            <button class="secundario">Cancelar</button>
-        </div>
-    </div>
+    <div class="box red">1000</div>
+    <div class="box green">2500</div>
+    <div class="box blue">995</div>
 </body>
 </html>
