--- a/html/l60.html
+++ b/html/l60.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
-    <div class="caja">
-        <h1 class="header">Soy cabecera</h1>
-        <div class="contenido">Soy contenido</div>
-        <div class="footer">
-            <button class="primario">Aceptar</button>
-            <button class="secundario">Cancelar</button>
-        </div>
+    <div class="grid">
+        <div class="element header">Header</div>
+        <div class="element">B</div>
+        <div class="element">C</div>
+        <div class="element">D</div>
+        <div class="element">E</div>
+        <div class="element">F</div>
     </div>
 </body>
 </html>
